added RESTful routing

--- a/CarDealership/Views/Cars/Index.cshtml
+++ b/CarDealership/Views/Cars/Index.cshtml
@@ -1,7 +1,7 @@
-@using System;
+<!-- @using System;
 @using System.Collections.Generic;
 @using CarDealership.Models;
-
+ -->
 
 
 <!DOCTYPE html>
@@ -25,7 +25,7 @@
             {
               <b></b>
               
-                <li><b>@myCar.CarModel</b> and the ID for storage is: <b>@myCar.Id</b>. Is the car driverless? <b>@myCar.CarIsDriverless</b>. The Color of the car is <b>@myCar.CarColor</b> and it has <b>@myCar.CarEngineType</b> engine. Its security system is: <b>@myCar.CarSecuritySystem</b></li>
+                <a href="/cars/@myCar.Id"><li><b>@myCar.CarModel</b></li></a>
         
             } 
         
