--- a/CarDealership/Views/Cars/Show.cshtml
+++ b/CarDealership/Views/Cars/Show.cshtml
@@ -18,8 +18,8 @@
 
     <p><b>@Model.CarModel</b> and the ID for storage is: <b>@Model.Id</b>. Is the car driverless? <b>@Model.CarIsDriverless</b>. The Color of the car is <b>@Model.CarColor</b> and it has <b>@Model.CarEngineType</b> engine. Its security system is: <b>@Model.CarSecuritySystem</b></p>
 
-    <a href='/items/new'>Add another Car</a>
-    <a href='/items'>View all Cars</a>
+    <a href='/cars/new'>Add another Car</a>
+    <a href='/cars'>View all Cars</a>
     </div>
   </body>
 </html>
