--- a/CarDealership/Views/Home/Index.cshtml
+++ b/CarDealership/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
   <body>
     
   <div class="container">
-    <h1>Welcome to the Car Dealership Application List!</h1>
+    <h1>Welcome to the Car Dealership Application</h1>
     <a href='/cars/new' class="btn btn-primary">Add a  car</a>
     <br>
     <br>
